# dbt-docs-hub

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
examples/: README.md
examples/opa-policies/: config.yaml
examples/opa-policies/policies/dbt-docs/: column_access.rego  main.rego  project_access.rego
filtering_api/: Dockerfile  jwt_utils.py  main.py  policy_engine.py  pyproject.toml
filtering_api/tests/: conftest.py  test_jwt_utils.py  test_policy_engine.py
indexer/: Dockerfile  pyproject.toml  sync.py
indexer/static/: catalog.html  index.html
indexer/templates/: nginx.conf.j2
nginx/: entrypoint.sh  nginx.base.conf
scripts/: setup_keycloak_hub.sh  test_hub_e2e.sh
