[project]
name = "dbtdocs-filtering-api"
version = "0.1.0"
description = "Reborn DataOps Platform — dbt docs Filtering API (enforcement layer)"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.40",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "pyjwt==2.9.0",
    "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "respx==0.21.1",
    "ruff==0.7.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
